[gd_scene load_steps=6 format=3 uid="uid://b5x07bsssvg6a"]

[ext_resource type="Script" uid="uid://ceqmhmuw6u5pn" path="res://pipe.gd" id="1_78010"]
[ext_resource type="Texture2D" uid="uid://dok571e0ydtve" path="res://bandera/Fondo.png" id="2_arayy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1uqvy"]
atlas = ExtResource("2_arayy")
region = Rect2(0, 0, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_i3wvs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uqvy")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qp7r7"]
size = Vector2(20, 8)

[node name="Pipe" type="RigidBody2D"]
scale = Vector2(3, 3)
mass = 1000.0
gravity_scale = 0.0
script = ExtResource("1_78010")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_i3wvs")
animation = &"new_animation"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -36)
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_qp7r7")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -24)

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
